crates/synth-parser/tests/snapshots/fixtures__every_positive_design_parses_clean@bga_ddr_unsupported.snap
---
source: crates/synth-parser/tests/fixtures.rs
expression: ast
---
{
  "imports": [],
  "board": {
    "name": "bga_ddr_unsupported",
    "statements": [
      {
        "stmt": "layers",
        "count": 6,
        "span": {
          "byte_start": 32,
          "byte_end": 40
        }
      },
      {
        "stmt": "manufacturer",
        "name": "jlcpcb",
        "span": {
          "byte_start": 43,
          "byte_end": 64
        }
      },
      {
        "stmt": "component",
        "refdes": "U1",
        "kind": "memory",
        "part": "ddr4_bga_sdram",
        "span": {
          "byte_start": 145,
          "byte_end": 182
        }
      }
    ],
    "span": {
      "byte_start": 0,
      "byte_end": 184
    }
  },
  "span": {
    "byte_start": 0,
    "byte_end": 184
  }
}
