crates/synth-parser/tests/snapshots/fixtures__every_positive_design_parses_clean@board_name_underscore.snap
---
source: crates/synth-parser/tests/fixtures.rs
expression: ast
---
{
  "imports": [],
  "board": {
    "name": "snake_case_name_here",
    "statements": [
      {
        "stmt": "layers",
        "count": 2,
        "span": {
          "byte_start": 33,
          "byte_end": 41
        }
      }
    ],
    "span": {
      "byte_start": 0,
      "byte_end": 43
    }
  },
  "span": {
    "byte_start": 0,
    "byte_end": 43
  }
}
