crates/synth-parser/tests/snapshots/fixtures__every_positive_design_parses_clean@comment_inside_keepout.snap
---
source: crates/synth-parser/tests/fixtures.rs
expression: ast
---
{
  "imports": [],
  "board": {
    "name": "comment_inside_keepout",
    "statements": [
      {
        "stmt": "layers",
        "count": 4,
        "span": {
          "byte_start": 35,
          "byte_end": 43
        }
      },
      {
        "stmt": "keepout",
        "name": "antenna",
        "attrs": [
          {
            "kind": "radius",
            "literal": "20",
            "unit": "mm",
            "span": {
              "byte_start": 97,
              "byte_end": 101
            }
          }
        ],
        "span": {
          "byte_start": 46,
          "byte_end": 105
        }
      }
    ],
    "span": {
      "byte_start": 0,
      "byte_end": 107
    }
  },
  "span": {
    "byte_start": 0,
    "byte_end": 107
  }
}
