crates/synth-parser/tests/snapshots/fixtures__every_positive_design_parses_clean@component_atecc.snap
---
source: crates/synth-parser/tests/fixtures.rs
expression: ast
---
{
  "imports": [],
  "board": {
    "name": "component_atecc",
    "statements": [
      {
        "stmt": "layers",
        "count": 2,
        "span": {
          "byte_start": 28,
          "byte_end": 36
        }
      },
      {
        "stmt": "component",
        "refdes": "U1",
        "kind": "secure_element",
        "part": "atecc608",
        "span": {
          "byte_start": 39,
          "byte_end": 78
        }
      }
    ],
    "span": {
      "byte_start": 0,
      "byte_end": 80
    }
  },
  "span": {
    "byte_start": 0,
    "byte_end": 80
  }
}
